# RegenTwin

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  Dockerfile  PROJECT_AUDIT.md  README.md  RegenTwin_Mathematical_Framework_v2.md  alembic.ini  funcphase2.md  index.html  instructions.md  mkdocs.yml  objects.inv  params.yaml  pyproject.toml  ruff.toml  setup_and_run.bat  setup_and_run.sh  sitemap.xml
.github/: codecov.yml
.github/workflows/: ci.yml  docs.yml  release.yml
Description/: README.md  description_abm_model.md  description_gating.md  description_integration.md  description_monte_carlo.md  description_parameter_extraction.md  description_sde_model.md
Description/Other/: description_generate_mock_data.md
Description/Phase1/: description_dataset_loader.md  description_fcs_parser.md  description_gating.md  description_image_loader.md  description_parameter_extraction.md  description_validation.md
Description/Phase2/: description_abm_extended.md  description_abm_model.md  description_equation_free.md  description_extended_sde.md  description_integration.md  description_monte_carlo.md  description_numerical_utils.md  description_parameters.md  description_robustness.md  description_sde_numerics.md  description_therapy_models.md  description_wound_phases.md
Description/Phase3/: description_analysis_plots.md  description_parameter_estimation.md  description_sensitivity_analysis.md  description_validation.md
Description/Phase4/: description_visualization.md
Doks/: RegenTwin_Detailed_Tasks.md  RegenTwin_Diploma_Report.md  RegenTwin_Diploma_Speech.md  RegenTwin_Implementation_Plan.md  RegenTwin_Mathematical_Framework.md  RegenTwin_PhD_Enhancement_Plan.md  RegenTwin_Therapy_Optimization.md  RegenTwin_Update_Implemention_Plan.md  RegenTwin_Верификация_Математического_Фреймворка.md  RegenTwin_Верификация_Отчёт.md
api-reference/: index.html
api-reference/abm/: index.html
api-reference/extended-sde/: index.html
api-reference/monte-carlo/: index.html
architecture/abm-model/: index.html
architecture/mathematical-framework/: index.html
architecture/monte-carlo/: index.html
architecture/overview/: index.html
architecture/sde-model/: index.html
architecture/sensitivity/: index.html
architecture/validation/: index.html
benchmarks/: index.html
benchmarks/report/: index.html
changelog/: index.html
data/mock/: README.md  generate_mock_data.py
data/validation/: README.md
developers_plans/: phase1_completed.md  phase2_plan.md  stub_template.md
docs/: RegenTwin_Detailed_Tasks.md  RegenTwin_Development_Plan.md  RegenTwin_Mathematical_Framework.md  changelog.md  index.en.md  index.md
docs/_archive/: RegenTwin_Detailed_Tasks.md  RegenTwin_Development_Plan.md  RegenTwin_Implementation_Plan.md  RegenTwin_Mathematical_Framework.md  Реалистичность метаморфа_ барьеры и шаги _ Shared Grok Conversation.html
docs/api-reference/: abm.en.md  abm.md  extended-sde.en.md  extended-sde.md  index.en.md  index.md  monte-carlo.en.md  monte-carlo.md
docs/architecture/: abm-model.md  mathematical-framework.md  monte-carlo.md  overview.md  sde-model.md  sensitivity.md  validation.md
docs/benchmarks/: index.md  report.md
docs/getting-started/: first-simulation.en.md  first-simulation.md  installation.en.md  installation.md  troubleshooting.md
docs/tutorials/: add-therapy.md  interpret-results.md  run-simulation.md
en/: index.html
en/api-reference/: index.html
en/benchmarks/: index.html
en/changelog/: index.html
frontend/: __init__.py  app.py
frontend/pages/: __init__.py
getting-started/first-simulation/: index.html
getting-started/installation/: index.html
getting-started/troubleshooting/: index.html
output/benchmarks/: report.md
scripts/: benchmark.py  benchmark_abm_mc.py  diagnose.py  e2e_abm_scenario.py  e2e_math_checks.py  full_api_test.py  generate_benchmark_report.py  generate_defense_figures.py  generate_e2e_fixtures.py  generate_test_fcs.py  kill_port.py  migrate_sqlite_to_duckdb.py  perf_baseline.py  profile_hotspots.py  sync_benchmarks_to_docs.py
scripts/_scalene_targets/: abm_target.py  mc_target.py  sde_target.py  sobol_target.py
search/: search_index.json
src/: __init__.py
src/analysis/: __init__.py  validation.py  validation_pipeline.py
src/api/: __init__.py  config.py  main.py
src/core/: __init__.py  abm_model.py  abm_spatial.py  bounds.py  equation_free.py  extended_sde.py  integration.py  monte_carlo.py  numerical_utils.py  parameter_estimation.py  parameters.py  params_loader.py  robustness.py  sde_model.py  sde_numerics.py  sensitivity_analysis.py  therapy_models.py  wound_phases.py
src/data/: __init__.py  dataset_loader.py  fcs_parser.py  gating.py  gene_mapping.py  hpa_client.py  image_loader.py  literature_data.py  parameter_extraction.py  validation.py
src/db/: __init__.py  models.py  session.py
src/tasks/: celery_app.py  simulation_tasks.py
src/utils/: __init__.py  logging.py
src/visualization/: __init__.py  analysis_plots.py  export.py  plots.py  spatial.py  theme.py
tests/: __init__.py  conftest.py  smoke_test.py
tests/e2e/: conftest.py  test_api_error_paths.py  test_api_export.py  test_api_health.py  test_api_upload_flow.py  test_api_viz_sde.py  test_cancel_flow.py  test_simulate_abm.py  test_simulate_extended.py  test_simulate_integrated.py  test_simulate_monte_carlo.py  test_simulate_mvp.py  test_websocket_progress.py
tests/fixtures/: mock_data.py
tests/integration/: __init__.py  test_pipeline_e2e.py
tests/performance/: __init__.py  conftest.py  test_benchmarks.py  test_processing_time.py
tutorials/add-therapy/: index.html
tutorials/interpret-results/: index.html
tutorials/run-simulation/: index.html
ui/: README.md  build_tauri.bat  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/.cargo/: config.toml
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+160 files in other folders)
