[project]
name = "regentwin"
version = "0.1.0"
description = "Программный инструмент для симуляции регенерации тканей с использованием данных flow cytometry и моделирования терапий PRP/PEMF"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "RegenTwin Team" }
]
keywords = ["biotech", "simulation", "regeneration", "flow-cytometry", "PRP", "PEMF"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",

    # Flow cytometry
    "flowkit>=1.0.0",

    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",

    # Backend API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",

    # Frontend
    "streamlit>=1.30.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Utilities
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",

    # Linting & Formatting
    "ruff>=0.1.9",
    "black>=23.12.0",
    "mypy>=1.8.0",

    # Pre-commit
    "pre-commit>=3.6.0",

    # Type stubs
    "pandas-stubs>=2.1.0",
    "types-python-dateutil>=2.8.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "integration: E2E integration tests for full data pipeline",
    "performance: Performance and benchmark tests",
    "slow: Slow tests that may take >1 second",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
