[project]
name = "regentwin"
version = "0.1.3"
description = "Программный инструмент для симуляции регенерации тканей с использованием данных flow cytometry и моделирования терапий PRP/PEMF"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "RegenTwin Team" }
]
keywords = ["biotech", "simulation", "regeneration", "flow-cytometry", "PRP", "PEMF"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core scientific
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",

    # Flow cytometry
    "flowkit>=1.0.0",

    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",

    # Image processing
    "scikit-learn>=1.3.0",

    # PDF export
    "fpdf2>=2.7.0",

    # Backend API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "duckdb>=1.1.0",
    "duckdb-engine>=0.13.0",

    # Bayesian inference & sensitivity analysis
    "pymc>=5.10.0",
    "emcee>=3.1.0",
    "arviz>=0.17.0",
    "SALib>=1.4.0",

    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Validation metrics
    "dtaidistance>=2.3.0",
    "properscoring>=0.1",
    "ruptures>=1.1.0",

    # Utilities
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.26.0",
    "websockets>=12.0",

    # Linting & Formatting
    "ruff>=0.1.9",
    "mypy>=1.8.0",

    # Pre-commit
    "pre-commit>=3.6.0",

    # Type stubs
    "pandas-stubs>=2.1.0",
    "types-python-dateutil>=2.8.0",

    # Benchmarking & profiling
    "py-spy>=0.4.0",
    "scalene>=1.5.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-static-i18n>=1.2.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-glightbox>=0.4.0",
]

[tool.uv]
default-groups = ["dev"]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "integration: E2E integration tests for full data pipeline",
    "performance: Performance and benchmark tests",
    "slow: Slow tests that may take >1 second",
    "e2e: end-to-end tests against a live uvicorn process",
    "e2e_slow: long-running e2e (integrated/cancel/monte_carlo)",
    "benchmark: pytest-benchmark performance tests (excluded from CI)",
]

[tool.pytest_benchmark]
storage = "file://./output/benchmarks/.pytest-benchmark"
save_data = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# Per-module overrides: тяжёлая numpy-типизация затрудняет полный strict.
# Снимаются по мере чистки в Phase 9.
[[tool.mypy.overrides]]
module = [
    "src.core.extended_sde",
    "src.core.abm_model",
    "src.core.abm_spatial",
    "src.core.monte_carlo",
    "src.core.sensitivity_analysis",
    "src.core.equation_free",
    "src.core.parameter_estimation",
    "src.core.robustness",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["src"]
omit = [
    "src/db/migrations/*",
    "src/__main__.py",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
